--- a/css/style.css
+++ b/css/style.css
@@ -313,6 +313,20 @@
 		width: 5rem;
 	}
 
+	@keyframes headerAnimate{
+		0%{background-image: url(../img/header.jpg)}
+		50%{background-image: url(../img/header2.jpg)}
+		100%{background-image: url(../img/header3.jpg)}
+	}
+
+	header{
+		height: 50vh;
+		background-size: cover;
+		animation-name: headerAnimate;
+		animation-duration: 10s;
+		animation-iteration-count: infinite;
+	}
+
 @media (max-width: 480px){
 
 	nav ul li a{
