--- a/css/style.css
+++ b/css/style.css
@@ -111,13 +111,7 @@
 	p{
 		font-size: 2rem;
 		color: white;
-		padding: 1rem;
 	}
-
-	/*section div a figure{
-		height: auto;
-		width: auto;
-	}*/
 
 	figcaption{
 		background-color: yellow;
@@ -175,16 +169,15 @@
 	}
 
 	.formulario__dos{
-		margin-top: 2rem;
+		margin-top: 1rem;
 		display: flex;
 		flex-direction: column;
-		justify-content: center;
-		text-align: center;
 	}
 
 	.formulario__consulta{
 		border: lightslategray outset 0.5rem;
 		background-color: lightgrey;
+		font-size: 2rem;
 	}
 
 	.formulario__cancelar{
@@ -209,7 +202,7 @@
 
 	.email{
 		margin-bottom: 2rem;
-		font-size: 2.8rem;
+		font-size: 2rem;
 	}
 
 	.coberturas__iconos{
@@ -231,11 +224,16 @@
 	}
 
 	.tabla__precios{
-		font-size: 8rem;
+		font-size: 15rem;
 		color: white;
 		border: 1rem double ghostwhite;
 		padding: 1rem;
-		width: auto;
+		width: 40%;
+	}
+
+	.fuente__acordeon p{
+		font-size: 3rem;
+		color: black;
 	}
 
 	.grid__flota{
@@ -297,11 +295,6 @@
 		grid-area: moto2;
 	}
 
-	/*.imagen{
-		margin-left: 2rem;
-		margin-bottom: 2rem;
-	}*/
-
 	.grid__autos{
 		display: grid;
 		grid-template-columns: repeat(3, 1fr);
@@ -316,14 +309,47 @@
 		padding: 1rem;
 	}
 
+	.active{
+		color: white !important;
+	}
+
 	#indice__logo{
 		width: 5rem;
+	}
+
+	.accordion{
+		margin-bottom: 4rem;
+	}
+
+	.btn__color{
+		background-color: white;
+		font-size: 3rem;
+	}
+
+	.logos__pagos{
+		display: flex;
+		justify-content: space-around;
 	}
 
 @media (max-width: 480px){
 
 	nav ul li a{
 		font-size: 1rem;
+	}
+
+	.logos__pagos{
+		flex-direction: column;
+		align-items: flex-start;
+	}
+
+	.logos__pagos img{
+		margin: 2rem;
+	}
+
+	.indice__main{
+		display: flex;
+		flex-direction: column;
+		align-items: center;
 	}
 
 	.formulario{
@@ -386,7 +412,7 @@
 		"moto1 moto2";
 	}
 
-	.imagen{
+	.imagen__flota{
 		margin-left: 1rem;
 		margin-bottom: 6rem;
 		width: auto;
@@ -457,7 +483,7 @@
 	}
 
 	.coberturas__iconos{
-		border: dashed black 1rem;
+		border: dashed black 3px;
 		margin-left: 1rem;
 	}
 
@@ -476,6 +502,20 @@
 
 	.formulario__cancelar:hover{
 		border: outset 1px black;
+	}
+
+	.animacion__navbar{
+		background-image: linear-gradient(currentColor, currentColor);
+		background-position: 0% 100%;
+		background-repeat: no-repeat;
+		background-size: 0% 2px;
+		transition: background-size .5s;
+
+	}
+
+	.animacion__navbar:hover{
+		font-weight: 800;
+		background-size: 100% 2px;
 	}
 }
 
