--- a/css/style.css
+++ b/css/style.css
@@ -337,6 +337,14 @@
 		font-size: 1rem;
 	}
 
+	.tabla__precios{
+		font-size: 8rem;
+		color: white;
+		border: 1rem double ghostwhite;
+		padding: 1rem;
+		width: 70%;
+	}
+
 	.logos__pagos{
 		flex-direction: column;
 		align-items: flex-start;
@@ -387,7 +395,7 @@
 		justify-content: center;
 	}
 
-	.imagen{
+	.imagen__flota{
 		margin-left: 1rem;
 		margin-bottom: 4rem;
 		display: flex;
