--- a/scss/_mixin.scss
+++ b/scss/_mixin.scss
@@ -1,10 +1,17 @@
-@mixin media($breakPoint){
+@mixin media ($breakPoint){
+
     @if $breakPoint==mobile{
-        @media (min-width:280px){
+        @media(max-width:279px){
             @content;
-        }
-        
+        }    
     }
+
+    @if $breakPoint==mobile{
+        @media(min-width:280px){
+            @content;
+        }    
+    }
+
     @if $breakPoint==tablet{
         @media(min-width: 780px){
             @content;
