--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -15,6 +15,8 @@ $submit:linear-gradient(to top, green, lightgreen);
 $cancel:linear-gradient(to top, red, orange);
 $navColor:linear-gradient(to top, lightblue,blue);
 $headerColor:linear-gradient(to top, blue,lightblue);
+$coberturaAuto:linear-gradient(to top, pink, red);
+$coberturaCamioneta:linear-gradient(to top, lightgreen, green);
 $degradeGrisBlanco:linear-gradient(to top, white,grey);
 $textArea:beige;
 
