--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -4,7 +4,7 @@ footer{
         @include media (mobile){
             display: flex;
             flex-direction: column;
-            background-color: $grey;
+            background-color: map-get($map: $paleta, $key: 'grey');
             font-size: 0.5rem;
     }
         @include media (tablet){
@@ -44,6 +44,7 @@ footer{
 
         p{
             @include media (mobile){
+                padding-top: 1rem;
                 font-size: $textSm + .5rem;
                 text-align: center;
             }
