--- a/scss/_formulario.scss
+++ b/scss/_formulario.scss
@@ -1,7 +1,7 @@
 .formulario{
         display: flex;
         justify-content: space-around;
-        color:$white;
+        color:map-get($map: $paleta, $key: 'white');
         padding: 1rem;
         @include media (mobile){
             flex-direction: column;
@@ -39,8 +39,8 @@
 		    font-size: 100%;
         }
         .formulario__consulta{
-            border: $grey outset 0.5rem;
-		    background-color: $textArea;
+            border: map-get($map: $paleta, $key: 'grey') outset 0.5rem;
+		    background-color: map-get($map: $paleta, $key: 'textArea');
 		    font-size: $textMd - 1rem;
         }
         .botones{
@@ -53,17 +53,12 @@
 		        height: auto;
 		        background: $cancel;
                 &:hover{
-                    border: outset 1px $black;
+                    border: outset 1px map-get($map: $paleta, $key: 'black');
                 }
             }
             .formulario__enviar{
-                font-size: 2rem;
-		        width: $w-45;
-		        height: auto;
+                @extend .formulario__cancelar;
 		        background: $submit;
-                &:hover{
-                    border: outset 1px $black;
-                }
             }
         }
     }
