--- a/scss/_formulario.scss
+++ b/scss/_formulario.scss
@@ -1,7 +1,7 @@
 .formulario{
         display: flex;
         justify-content: space-around;
-        color:map-get($map: $paleta, $key: 'white');
+        color:map-get($map: $paleta, $key: 'black');
         padding: 1rem;
         @include media (mobile){
             flex-direction: column;
@@ -39,7 +39,7 @@
 		    font-size: 100%;
         }
         .formulario__consulta{
-            border: map-get($map: $paleta, $key: 'grey') outset 0.5rem;
+            border: map-get($map: $paleta, $key: 'black') outset 2px;
 		    background-color: map-get($map: $paleta, $key: 'textArea');
 		    font-size: $textMd - 1rem;
         }
@@ -71,14 +71,29 @@
 }
 
 form{
+    @include media (mobile){
+        background:map-get($map: $paleta, $key: 'softGrey');
+        box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+        box-shadow: 37px 42px 0px 3px rgba(0,0,0,0.75);
+        -webkit-box-shadow: 37px 42px 0px 3px rgba(0,0,0,0.75);
+        -moz-box-shadow: 37px 42px 0px 3px rgba(0,0,0,0.75);
+    }
     @include media (tablet){
         display: flex;
         flex-direction: row;
         justify-content: space-around;
+        background:map-get($map: $paleta, $key: 'softGrey');
+        box-shadow: 37px 42px 0px 3px rgba(0,0,0,0.75);
+        -webkit-box-shadow: 37px 42px 0px 3px rgba(0,0,0,0.75);
+        -moz-box-shadow: 37px 42px 0px 3px rgba(0,0,0,0.75);
     }
 
     @include media (desktop){
         flex-direction: column;
+        background:map-get($map: $paleta, $key: 'softGrey');
+        box-shadow: 37px 42px 0px 3px rgba(0,0,0,0.75);
+        -webkit-box-shadow: 37px 42px 0px 3px rgba(0,0,0,0.75);
+        -moz-box-shadow: 37px 42px 0px 3px rgba(0,0,0,0.75);
     }
 }
 
