--- a/scss/_formulario.scss
+++ b/scss/_formulario.scss
@@ -39,9 +39,20 @@
 		    font-size: 100%;
         }
         .formulario__consulta{
+            @include media (mobile){
+                border: map-get($map: $paleta, $key: 'black') outset 2px;
+                background-color: map-get($map: $paleta, $key: 'textArea');
+                font-size: $textMd - 1rem;
+                width: 80%;
+                margin-left: 5rem;
+            }
+            @include media (tablet){
             border: map-get($map: $paleta, $key: 'black') outset 2px;
 		    background-color: map-get($map: $paleta, $key: 'textArea');
 		    font-size: $textMd - 1rem;
+            margin-left: 0;
+            width: 100%;
+            }
         }
         .botones{
             display: flex;
@@ -73,27 +84,23 @@
 form{
     @include media (mobile){
         background:map-get($map: $paleta, $key: 'softGrey');
-        box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
-        box-shadow: 37px 42px 0px 3px rgba(0,0,0,0.75);
-        -webkit-box-shadow: 37px 42px 0px 3px rgba(0,0,0,0.75);
-        -moz-box-shadow: 37px 42px 0px 3px rgba(0,0,0,0.75);
     }
     @include media (tablet){
         display: flex;
         flex-direction: row;
         justify-content: space-around;
         background:map-get($map: $paleta, $key: 'softGrey');
-        box-shadow: 37px 42px 0px 3px rgba(0,0,0,0.75);
-        -webkit-box-shadow: 37px 42px 0px 3px rgba(0,0,0,0.75);
-        -moz-box-shadow: 37px 42px 0px 3px rgba(0,0,0,0.75);
+        box-shadow: 10px 6px 12px 3px rgba(0,0,0,0.75);
+        -webkit-box-shadow: 10px 6px 12px 3px rgba(0,0,0,0.75);
+        -moz-box-shadow: 10px 6px 12px 3px rgba(0,0,0,0.75);
     }
 
     @include media (desktop){
         flex-direction: column;
         background:map-get($map: $paleta, $key: 'softGrey');
-        box-shadow: 37px 42px 0px 3px rgba(0,0,0,0.75);
-        -webkit-box-shadow: 37px 42px 0px 3px rgba(0,0,0,0.75);
-        -moz-box-shadow: 37px 42px 0px 3px rgba(0,0,0,0.75);
+        box-shadow: 25px 13px 12px 3px rgba(0,0,0,0.75);
+        -webkit-box-shadow: 25px 13px 12px 3px rgba(0,0,0,0.75);
+        -moz-box-shadow: 25px 13px 12px 3px rgba(0,0,0,0.75);
     }
 }
 
