--- a/scss/main.css
+++ b/scss/main.css
@@ -138,9 +138,9 @@ $backColor:rgba(255, 255, 255, 0.2);*/
   form {
     flex-direction: column;
     background: grey;
-    box-shadow: 25px 13px 12px 3px rgba(0, 0, 0, 0.75);
-    -webkit-box-shadow: 25px 13px 12px 3px rgba(0, 0, 0, 0.75);
-    -moz-box-shadow: 25px 13px 12px 3px rgba(0, 0, 0, 0.75);
+    box-shadow: 17px 5px 10px 3px rgba(0, 0, 0, 0.75);
+    -webkit-box-shadow: 17px 5px 10px 3px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 17px 5px 10px 3px rgba(0, 0, 0, 0.75);
   }
 }
 
@@ -404,6 +404,18 @@ a {
 
 .accordion {
   margin-bottom: 4rem;
+}
+
+.accordion-button {
+  background: linear-gradient(to top, blue, lightblue);
+}
+
+.accordion-body {
+  background-color: lightblue;
+}
+
+.accordion-item {
+  background-color: blue;
 }
 
 .fuente__acordeon p {
