--- a/scss/_navBar.scss
+++ b/scss/_navBar.scss
@@ -9,7 +9,8 @@ nav{
 		width: auto;
         grid-area: nav;
     #indice__logo{
-        width: 5rem;
+        width: 6rem;
+        margin-left: 2rem;
     }
     ul{
         display: flex;
