--- a/scss/_commons.scss
+++ b/scss/_commons.scss
@@ -43,13 +43,14 @@ p{
 }
 
 aside{
+    @include media (mobile){
         grid-area: aside;
 		display: flex;
 		justify-content: center;
 		align-items: center;
 		font-size: $textLg;
-		border: map-get($map: $paleta, $key: 'grey') solid 1rem;
-		background-color: map-get($map: $paleta, $key: 'softGrey');
+		border: map-get($map: $paleta, $key: 'black') solid 5px;
+		background-color: map-get($map: $paleta, $key: 'mainColor');
         div{
             ul{
                 li{
@@ -60,6 +61,11 @@ aside{
                 }
             }
         }
+    }
+    @include media (tablet){
+        border-top: map-get($map: $paleta, $key: 'black') solid 5px;
+        border-right: map-get($map: $paleta, $key: 'black') solid 5px;
+    }
 }
 
 header{
@@ -82,7 +88,6 @@ main{
 	background-blend-mode: soft-light;
 	background-repeat: no-repeat;
 	background-size: cover;
-	display: grid;
 	grid-area: main;
 	overflow: hidden;
 }
@@ -90,6 +95,27 @@ main{
 a{
     text-decoration: none;
 	color: map-get($map: $paleta, $key: 'black');
+}
+
+.errorMain{
+        background-image: none;
+}
+
+.errorImagen{
+    width: 100%;
+}
+
+.errorMesagge{
+    margin-left: 2rem;
+    display: flex;
+    align-items: center;
+    p{
+        @include media (desktop){
+            &:hover{
+                text-decoration: underline;
+            }
+        }
+    }
 }
 
 .logos__pagos{
@@ -109,24 +135,21 @@ a{
          }
 }
 
-.navegacion__seleccion--encendido{
-    color: map-get($map: $paleta, $key: 'thirdColor');
-}
-
-.navegacion__seleccion{
-    &:hover{
-        color: map-get($map: $paleta, $key: 'thirdColor');
-    }
+.moto__titulo{
+    text-align: center;
+    background-color: map-get($map: $paleta, $key: 'secondaryColor');
+    border-top-right-radius: 2rem;
+    border-top-left-radius: 2rem;
+    margin-bottom: 1rem;
 }
 
 .coberturas__moto{
     margin: 1rem;
     text-align: center;
-    background: $navColor;
-    border-radius: 5rem;
+    background: map-get($map: $paleta, $key: 'mainColor');
+    border-radius: 2rem;
     .coberturaTitulos{
-        padding-top: 2rem;
-        text-decoration: underline;
+        padding: 2rem;
     }
     P{
         color: map-get($map: $paleta, $key: 'black');
@@ -151,12 +174,12 @@ a{
 
 .coberturas__auto{
     @extend .coberturas__moto;
-        background: $coberturaAuto;
+        background: map-get($map: $paleta, $key: 'mainColor');
 }
 
 .coberturas__camioneta{
     @extend .coberturas__moto;
-        background: $coberturaCamioneta;
+        background: map-get($map: $paleta, $key: 'mainColor');
 }
 
 .borde{
@@ -245,5 +268,53 @@ p{
     code{
         color: map-get($map: $paleta, $key: 'black');
     }
+}
+
+section{
+    grid-area: section;
+}
+
+
+#grid{
+    display: grid;
+    grid-template-areas: 
+    "nav nav"
+    "header header"
+    "main main"
+    "footer footer";
+    grid-template-columns: repeat(2,auto);
+    grid-template-rows: repeat(4,auto);
+  
+    @media (max-width: 600px) {
+        grid-template-areas: "nav" "header" "main" "footer";
+        grid-template-columns: 100%;
+        grid-template-rows: auto;
+    }
+}
+
+#error__page{
+    @include media (mobile){
+        display: grid;
+        grid-template-areas: 
+        "nav"
+        "main"
+        "footer";
+        grid-template-columns: auto;
+        grid-template-rows: repeat(3,auto);
+    }
+    @include media (tablet){
+        display: grid;
+        grid-template-areas: 
+        "nav nav"
+        "main main"
+        "footer footer";
+        grid-template-columns: 50% 50%;
+        grid-template-rows: repeat(3,auto);
+        overflow: hidden;
+    }
+}
+
+.div__error{
+    height: 100%;
 }
 
