--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -1,29 +1,17 @@
 //variables
 
 //colors
-/*$mainColor:lightblue;
-$secondaryColor:blue;
-$thirdColor:yellow;
-$keyColor:red;
-$white:white;
-$black:black;
-$grey:dimgrey;
-$softGrey:grey;
-$textArea:beige;
-$softColor: rgb(50, 50, 50);
-$backColor:rgba(255, 255, 255, 0.2);*/
-$submit:linear-gradient(to top, green, lightgreen);
-$cancel:linear-gradient(to top, red, orange);
 $navColor:linear-gradient(to top, lightblue,blue);
 $headerColor:linear-gradient(to top, blue,lightblue);
-$coberturaAuto:linear-gradient(to top, pink, red);
-$coberturaCamioneta:linear-gradient(to top, lightgreen, green);
-$degradeGrisBlanco:linear-gradient(to top, white,grey);
+$degradeBlancoCeleste:linear-gradient(to top, white,lightblue); 
+$degradeGrisBlanco:linear-gradient(to top, white, grey);
 $softColor: rgb(50, 50, 50);
 $backColor: rgba(255, 255, 255, 0.2);
 
 
 $paleta:(
+    'orange':orange,
+    'lightgreen':lightgreen,
     'mainColor':lightblue,
     'secondaryColor':blue,
     'thirdColor':yellow,
@@ -32,7 +20,7 @@ $paleta:(
     'black':black,
     'grey':dimgrey,
     'softGrey':grey,
-    'textArea':beige,
+    'textArea':lightgrey,
 );
  
 
